<resources>
    <string name="app_name">AgenDaily</string>
    <string name="email">Email</string>
    <string name="contraseña">Password</string>
    <string name="registrar">Sign up</string>
    <string name="iniciar_sesion">Log in</string>
    <string name="invitado"><u>Enter as a guest</u></string>
    <string name="crear_cuenta">Create account in AgenDaily</string>
    <string name="nombre">Name</string>
    <string name="recordar_contraseña"><u> I forgot my password </u></string>
    <string name="enviar">Send</string>
    <string name="Diario">Journal</string>
    <string name="Notas">Grades</string>
    <string name="avisos">Reminders</string>
    <string name="calendario">Calendar</string>
    <string name="volver">Back</string>
    <string name="info">information</string>
    <string name="borrar_cuenta">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="hacerse_premium">go premium</string>
    <string name="perfil">Profile</string>
    <string name="Usuario">Username</string>
    <string name="correoTitulo"><u> Email </u></string>
    <string name="myNotes">My notes</string>
    <string name="contraseña2">Repeat Password</string>
    <string name="campos">Fields must be completed</string>
    <string name="coincidir">Passwords do not match</string>
    <string name="lista">Note List</string>
    <string name="agregar_editar">Add/edit note</string>
    <string name="borrar_nota">Delete note</string>
    <string name="editar_nota">Edit note</string>
    <string name="Ocultar">Ocult note</string>
    <string name="buscar_fecha">Search for date</string>
    <string name="ayuda_menu">USER HELP: MAIN MENU  In this menu you will find a list of different functions with which you can interact, click on them to access the activity</string>
    <string name="Entendido">Agreed</string>
    <string name="ayuda_Diario">USER HELP: DAILY MENU  To start creating your diary, click on the button with the \'+\' sign in the bottom right. Once you create your diaries, they will be placed in the activity. With the search bar you can filter newspapers by words or dates.</string>
    <string name="menu_notas">USER HELP: ADD JOURNAL MENU  To add your diaries, the current time comes by default along with the day, with which you will only have to fill in the description section. Once you fill it out, click on the button with the \'+\' sign located below and your journal sheet will be created. You have the possibility to share it through the share button located above in the top menu</string>
    <string name="menu_agregarDiario">USER HELP: MENU ADD NOTE  To add your notes you have to fill in the title and description field. Once you fill it out, click on the button with the \'+\' sign located below and your journal sheet will be created. You have the possibility to share it using the share button located above in the top menu or to add images from your gallery by clicking on the clip located at the top right</string>
    <string name="cambiar_contraseña">Change Password</string>
    <string name="cambiar">Change</string>
    <string name="contraseña_nueva">New Password</string>
    <string name="menu_AgregarNota">USER HELP: MENU ADD NOTE  To add your notes you have to fill in the title and description field. Once you fill it out, click on the button with the \'+\' sign located below and your journal sheet will be created. You have the possibility to share it using the share button located above in the top menu or to add images from your gallery by clicking on the clip located at the top right</string>
    <string name="elegir_hora">Choose hour</string>
    <string name="hora">Hour:</string>
    <string name="titulo">Title</string>
    <string name="changed_to">notification changed to at %s</string>
    <string name="select_time">select time</string>
    <string name="new_notificacion">New notification</string>
    <string name="Guardar">Save</string>
    <string name="crear_recordatorio">Add Recordatory</string>
    <string name="menu_ayudarecordatorio">HELP USER REMINDERS: In this activity you can insert a reminder by adding the time with the \'choose time\' button. Once we have the reminder created we will give the save button and it will take us to the menu</string>
    <string name="buscarPor">Search for date</string>
    <string name="sync_pref">Security copy</string>
    <string name="sync_pref_summary">The notes will are copied to:</string>
    <string name="pref_syncConnectionType">Conexión type</string>
    <string name="pref_syncConnectionType_dialog_title">Choose conection</string>
    <string name="pref_syncConnectionType_default_value">WiFi</string>
    <string name="pref_syncConnectionType_summary">Choose the type of connection to make backup copies</string>
    <string name="opciones">Do you want to add a note?</string>
    <string name="verYcambiar">View user and change password</string>

    <!-- Strings used for fragments for navigation -->

</resources>