<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".Formulario">

    <ImageView
        android:id="@+id/logoFormulario"
        android:layout_width="357dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/logoapp" />

    <TextView
        android:id="@+id/txtFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/button_rounder"
        android:backgroundTint="@color/azul_claro"
        android:text="@string/crear_cuenta"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/azul_oscuro"
        android:textColorHint="@color/azul_oscuro"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtEmailFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/azul_oscuro"
        android:textColorHint="@color/azul_oscuro"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/txtContraseñaFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailFormulario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/azul_oscuro"
        android:textColorHint="@color/azul_oscuro"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnRegistrarseFormulario"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="525dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/button_rounder"
        android:text="@string/registrar"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imgFlecha"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="328dp"
        android:contentDescription="flecha"
        android:onClick="atras"
        app:srcCompat="@drawable/flecha" />
</RelativeLayout>