<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".Avisos">


    <TextView
        android:id="@+id/textViewRecordatorio"
        android:layout_width="195dp"
        android:layout_height="79dp"
        android:layout_marginTop="24dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/crear_recordatorio"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextAviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textPersonName"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hora"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/notifications_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            tools:text="12:00" />


        <Button
            android:id="@+id/change_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounder"
            android:backgroundTint="@color/azul_claro"
            android:gravity="center_horizontal"
            android:text="@string/elegir_hora"
            android:textColor="@color/blanco"
            android:textSize="30sp" />


    </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="419dp"
            android:layout_marginEnd="115dp"
            android:background="@drawable/button_rounder"
            android:backgroundTint="@color/azul_claro"
            android:onClick="save"
            android:text="@string/Guardar"
            android:textColor="@color/blanco"
            android:textSize="20sp" />


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>