<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">
    <!--
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    android:background="@color/gris"
    app:cardUseCompatPadding="true"
    -->


    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/gris"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rvColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/azul_claro"
            android:onClick="diario"
            android:orientation="horizontal"
            android:padding="40dp">


            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="204dp"
                android:contentDescription="@string/Diario"
                tools:srcCompat="@drawable/diario" />

            <TextView
                android:id="@+id/minijuego"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="133dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="80dp"
                android:text="@string/Diario"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />


        </RelativeLayout>
    </LinearLayout>

-->

    <Button
        android:id="@+id/btnDiario"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/button_rounder"
        android:drawableLeft="@drawable/diariologo"
        android:onClick="diario"
        android:text="@string/Diario"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnNotas"
        android:layout_width="wrap_content"
        android:layout_height="97dp"
        android:layout_below="@+id/btnDiario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/button_rounder"
        android:drawableLeft="@drawable/publicalo"
        android:onClick="notas"
        android:text="@string/Notas"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnAvisos"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_below="@+id/btnDiario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/button_rounder"
        android:drawableLeft="@drawable/megafono"
        android:onClick="avisos"
        android:text="@string/avisos"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnCalendario"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_below="@+id/btnDiario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/button_rounder"
        android:drawableLeft="@drawable/calendario"
        android:onClick="calendario"
        android:text="@string/calendario"
        android:textSize="20dp" />

</RelativeLayout>